--- a/Step08/09_openweather.html
+++ b/Step08/09_openweather.html
@@ -8,15 +8,40 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script>
     $(function(){
-       
+       $('#request').click(function (e) { 
+            let call_url = `https://api.openweathermap.org/data/2.5/weather?id=1835847&appid=23815d818a51ef76062d119292b5691e`;
+
+            $.ajax({
+                type: "get",
+                url: call_url,
+                dataType: "json",
+                success: function (r) {
+                    console.log(r);
+                    //도시명
+                    $("#result").append(`<p>도시명 : ${r.name}</p>`)
+                    //현재 날씨
+                    $("#result").append(`<p>현재날씨 : ${r.weather[0].main}</p>`)
+                    $("#result").append(`<p>현재 강우량 : ${r.rain["1h"]}mm/h</p>`)
+                    //현재 온도 -> 섭씨 표현
+                    $("#result").append(`<p>현재온도 : ${r.main.temp - 273.15}</p>`)
+                    //최고 온도 -> 섭씨 표현
+                    $("#result").append(`<p>최고온도 : ${r.main.temp_max - 273.15}</p>`)
+                    //최저 온도 -> 섭씨 표현
+                    $("#result").append(`<p>최저온도 : ${r.main.temp_min - 273.15}</p>`)
+                    //바람 세기
+                    $("#result").append(`<p>바람세기 : ${r.wind.speed}meter/sec</p>`)
+
+                }
+            });
+        
+       });
     });
     </script>
 </head>
 <body>
     <button id="request">날씨 정보 요청</button>
     <div id="result"></div>
-    <div id="openweathermap-widget-11"></div>
-<script src='//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/d3.min.js'></script><script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 11,cityid: '1835848',appid: '23815d818a51ef76062d119292b5691e',units: 'metric',containerid: 'openweathermap-widget-11',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();</script>
-
+    <div id="openweathermap-widget-15"></div>
+<script>window.myWidgetParam ? window.myWidgetParam : window.myWidgetParam = [];  window.myWidgetParam.push({id: 15,cityid: '1835848',appid: '23815d818a51ef76062d119292b5691e',units: 'metric',containerid: 'openweathermap-widget-15',  });  (function() {var script = document.createElement('script');script.async = true;script.charset = "utf-8";script.src = "//openweathermap.org/themes/openweathermap/assets/vendor/owm/js/weather-widget-generator.js";var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(script, s);  })();</script>
 </body>
 </html>
